--- a/calendario/root/templates/root/base.html
+++ b/calendario/root/templates/root/base.html
@@ -5,19 +5,10 @@
 {% block optionalCSS %}{% endblock %}
 </head>
 <body>
-    <div class="wrapper">
-        {% include './sidebar.html' %}
-        <div class="main-panel">
-            {% include './navbar.html' %}
-            <div class="content">
-                <div class="container-fluid">
-                    <!-- Content View Here -->
-                    {% block content %}{% endblock %}
-                </div>
-            </div>
-            {% include './footer.html' %}
-        </div> <!-- Close main-panel -->
-    </div> <!-- Close wrapper -->
+    <div class="container">
+        {% block content %}{% endblock %}
+    </div>
+    {% include './footer.html' %}
 </body>
 {% include './js.html' %}
 <script>
