--- a/calendario/root/templates/root/js.html
+++ b/calendario/root/templates/root/js.html
@@ -1,33 +1,4 @@
 {% load static %}
-<!-- Core JS Files -->
-<script src="{% static 'root/js/core/jquery.3.2.1.min.js' %}" type="text/javascript"></script>
-<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
-<script src="{% static 'root/js/core/popper.min.js' %}" type="text/javascript"></script>
-<script src="{% static 'root/js/core/bootstrap.min.js' %}" type="text/javascript"></script>
-
-<!-- Optional Plugin JS -->
-<script src="{% static 'root/js/plugins/bootstrap-switch.js' %}"></script><!--  Plugin for Switches -->
-<script src="{% static 'root/js/plugins/chartist.min.js' %}"></script><!--  Chartist Plugin  -->
-<script src="{% static 'root/js/plugins/bootstrap-notify.js' %}"></script><!--  Notifications Plugin    -->
-<script type="text/javascript" src="https://cdn.datatables.net/v/bs4/dt-1.10.18/datatables.min.js"></script> <!-- Tables Plugin -->
-
-<!-- Light Bootstrap Template JS -->
-<script src="{% static 'root/js/light-bootstrap-dashboard.js' %}" type="text/javascript"></script>
-<script src='https://kit.fontawesome.com/a076d05399.js'></script>
-
-<!-- Archivos Opcionales Creados por el Equipo -->
-<script src="{% static 'root/js/voyager/notificaciones.js' %}" type="text/javascript"></script>
-<script src="{% static 'root/js/voyager/validaciones.js' %}" type="text/javascript"></script>
-<script>
-    $(document).ready(function(){
-        // Inicializar popovers
-        $('[data-toggle="popover"]').popover({
-            html: true,
-            content: function () {
-            return '<img class="img-fluid" src="'+$(this).data('img') + '" />';
-            }
-        });
-        // Inicializar datepickers
-        $(".datepicker" ).datepicker();
-    });
-</script>
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
