--- a/calendario/sesiones/templates/sesiones/index.html
+++ b/calendario/sesiones/templates/sesiones/index.html
@@ -10,6 +10,13 @@
         Agregar Sesión
     </button>
 </div>
+
+ <form method="post" novalidate>
+  {% csrf_token %}
+  {{ form }}
+  <button type="submit">Submit</button>
+</form>
+   
 {% if empty == 1 %}
     No hay sesiones
 {% else %}
@@ -49,6 +56,7 @@
         </div>
     {% endfor %}
 </div> <!-- Termina row div -->
+
 {% endif %}
 {% endblock content %}
 
