--- a/calendario/root/templates/root/base.html
+++ b/calendario/root/templates/root/base.html
@@ -1,20 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-{% include './header.html' %}
-{% block optionalCSS %}{% endblock %}
-{% include './js.html' %}
-{% block optionalJS %}{% endblock %}
+  {% include './header.html' %}
+  {% block optionalCSS %}{% endblock %}
+  {% include './js.html' %}
+  {% block optionalJS %}{% endblock %}
 </head>
+
 <body>
-    <div class="container">
-        {% block content %}{% endblock %}
+  <div class="container-fluid">
+    <div class="row">
+      {% include './sidebar.html' %}
+      <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-4">
+        <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
+          {% block content %}{% endblock %}
+        </div>
+      </main>
     </div>
-    {% include './footer.html' %}
+  </div>
+  {% include './footer.html' %}
 </body>
 
 <script>
-    var csrftoken = '{{ csrf_token }}';
+  var csrftoken = '{{ csrf_token }}';
 </script>
 
 </html>
