--- a/calendario/root/templates/root/base.html
+++ b/calendario/root/templates/root/base.html
@@ -12,8 +12,8 @@
   <div class="container-fluid">
     <div class="row">
       {% include './sidebar.html' %}
-      <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-4">
-        <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
+      <main role="main" class="col-md-10 col-lg-10 ml-sm-auto px-5">
+        <div class="">
           {% block content %}{% endblock %}
         </div>
       </main>
