--- a/calendario/sesiones/templates/sesiones/index.html
+++ b/calendario/sesiones/templates/sesiones/index.html
@@ -10,7 +10,7 @@
         Agregar Sesión
     </a>
 </div>
-   
+
 {% if empty == 1 %}
     No hay sesiones
 {% else %}
@@ -24,11 +24,7 @@
 </div>
 <div class="row mx-0"> <!-- Empieza row div -->
     {% for s in sessions %}
-        {% if s.isClass %}
-        <div class="card col-6">
-        {% else %}
-        <div class="card col-6 bg-warning">
-        {% endif %}
+        <div class="card col-6 bg-info">
             <div class="card-body">
                 <div class="row">
                     <div class="w-75">
