--- a/calendario/sesiones/templates/sesiones/forms/agregar.html
+++ b/calendario/sesiones/templates/sesiones/forms/agregar.html
@@ -3,15 +3,24 @@
 
 {% block content %}
 
-<form method="post" novalidate>
-    {{ form.media }}
-    {{ form.content }}
-    <br>
-    <input class="mt-5" type="submit"/>
-</form>
+<div class="row mx-0 bg-warning">
+  <div class="col-12">
+    <form method="post" novalidate>
+      {{ form.media }}
+      {{ form.content }}
+
+      <div class="text-sm-center text-md-right my-5">
+        <input class="btn btn-success" type="submit" value="Guardar">
+        <a class="btn btn-danger" href="../calendarioFundamentos">
+          Cancelar
+        </a>
+      </div>
+    </form>
+  </div>
+</div>
 
 {% endblock content %}
 
 {% block optionalJS %}
-    
+
 {% endblock %}
