Ajustar ckeeditor nuevamente removiendo padding a contenedor padre

--- a/calendario/root/templates/root/base.html
+++ b/calendario/root/templates/root/base.html
@@ -12,7 +12,7 @@
   <div class="container-fluid">
     <div class="row">
       {% include './sidebar.html' %}
-      <main role="main" class="col-md-10 col-lg-10 ml-sm-auto px-5">
+      <main role="main" class="col-md-10 col-lg-10 ml-sm-auto">
         <div class="">
           {% block content %}{% endblock %}
         </div>
