--- a/calendario/sesiones/templates/sesiones/forms/agregar.html
+++ b/calendario/sesiones/templates/sesiones/forms/agregar.html
@@ -3,16 +3,39 @@
 
 {% block content %}
 
-<div class="row mx-0 bg-warning">
+<div class="row mx-0">
   <div class="col-12">
-    <form method="post" novalidate>
+  <div class="text-center display-4">
+    <strong>Agregar nueva sesión</strong>
+  </div>
+    <form method="post" class="mt-2">
       {{ form.media }}
+      <div class="form-group row">
+        <label for="session-name" class="col-sm-2 col-form-label">Nombre de la sesión</label>
+        <div class="col-sm-10">
+          {{ form.name }}
+        </div>
+      </div>
+
+      <div class="form-group row">
+        <div class="col-sm-2">¿La sesión es de clase?</div>
+        <div class="col-sm-10">
+          <div class="form-check">
+            {{ form.isClass }}
+          </div>
+        </div>
+      </div>
+
       {{ form.content }}
 
-      <input class="btn btn-success" type="submit" value="Guardar">
-      <a class="btn btn-danger" href="../calendarioFundamentos">
-        Cancelar
-      </a>
+      <div class="form-group row">
+        <div class="col-sm-10">
+          <input class="btn btn-success" type="submit" value="Guardar">
+          <a class="btn btn-danger" href="../calendarioFundamentos">
+            Cancelar
+          </a>
+        </div>
+      </div>
     </form>
   </div>
 </div>
