Agregar urls y href a los otros calendarios

--- a/calendario/root/templates/root/sidebar.html
+++ b/calendario/root/templates/root/sidebar.html
@@ -8,19 +8,19 @@
     </h6>
     <ul class="nav flex-column">
       <li class="nav-item">
-        <a class="nav-link" href="#">
+        <a class="nav-link" href="../calendarioFundamentos">
           <span data-feather="file-text"></span>
           Fundamentos de programación
         </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">
+        <a class="nav-link" href="../calendarioLenguajes">
           <span data-feather="file-text"></span>
-          Lenguajes programación
+          Lenguajes de programación
         </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">
+        <a class="nav-link" href="../calendarioIA">
           <span data-feather="file-text"></span>
           Inteligenica Artificial
         </a>
