--- a/calendario/sesiones/templates/sesiones/forms/agregar.html
+++ b/calendario/sesiones/templates/sesiones/forms/agregar.html
@@ -31,7 +31,7 @@
       <div class="form-group row">
         <div class="col-sm-10">
           <input class="btn btn-success" type="submit" value="Guardar">
-          <a class="btn btn-danger" href="../calendarioFundamentos">
+          <a class="btn btn-danger" href="../sesiones/calendarioFundamentos">
             Cancelar
           </a>
         </div>
