--- a/calendario/sesiones/templates/sesiones/index.html
+++ b/calendario/sesiones/templates/sesiones/index.html
@@ -6,7 +6,7 @@
     <strong>{{ group }}</strong>
 </div>
 <div class="text-sm-center text-md-right my-5">
-    <a class="btn btn-success" href="addSessionGroup">
+    <a class="btn btn-success" href="../addSessionGroup">
         Agregar Sesión
     </a>
 </div>
