agregar ckeeditor y corregir paths sidebar

--- a/calendario/root/templates/root/sidebar.html
+++ b/calendario/root/templates/root/sidebar.html
@@ -8,19 +8,19 @@
     </h6>
     <ul class="nav flex-column">
       <li class="nav-item">
-        <a class="nav-link" href="../calendarioFundamentos">
+        <a class="nav-link" href="../../sesiones/calendarioFundamentos/">
           <span data-feather="file-text"></span>
           Fundamentos de programación
         </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="../calendarioLenguajes">
+        <a class="nav-link" href="../../sesiones/calendarioLenguajes/">
           <span data-feather="file-text"></span>
           Lenguajes de programación
         </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="../calendarioIA">
+        <a class="nav-link" href="../../sesiones/calendarioIA/">
           <span data-feather="file-text"></span>
           Inteligenica Artificial
         </a>
