--- a/calendario/sesiones/templates/sesiones/forms/agregar.html
+++ b/calendario/sesiones/templates/sesiones/forms/agregar.html
@@ -32,9 +32,11 @@
       <div class="form-group row">
         <div class="col-sm-10">
           <input class="btn btn-success" type="submit" value="Guardar">
-          <a class="btn btn-danger" href="../sesiones/calendarioFundamentos">
-            Cancelar
+          <a target="_blank" class="btn btn-danger"
+            href="{% url currentCalendar  %}">
+              Cancelar
           </a>
+
         </div>
       </div>
     </form>
