--- a/calendario/sesiones/templates/sesiones/index.html
+++ b/calendario/sesiones/templates/sesiones/index.html
@@ -28,7 +28,7 @@
             <div class="card-body">
                 <div class="row">
                     <div class="w-75">
-                        <h5 class="card-title">{{ s.name }}</h5>
+                        <h5 class="card-title">{{ s }}</h5>
                     </div>
                     <div class="w-25">
                         <button type="button" class="btn btn-primary btn-sm">
