Agregar numeracion al sidebar

--- a/calendario/root/templates/root/sidebar.html
+++ b/calendario/root/templates/root/sidebar.html
@@ -10,19 +10,19 @@
       <li class="nav-item">
         <a class="nav-link" href="../../sesiones/calendarioFundamentos/">
           <span data-feather="file-text"></span>
-          Fundamentos de programación
+          1. Fundamentos de programación
         </a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="../../sesiones/calendarioLenguajes/">
           <span data-feather="file-text"></span>
-          Lenguajes de programación
+          2. Lenguajes de programación
         </a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="../../sesiones/calendarioIA/">
           <span data-feather="file-text"></span>
-          Inteligenica Artificial
+          3. Inteligenica Artificial
         </a>
       </li>
     </ul>
