agregar view para recorrer sesión y ajustar urls

--- a/calendario/root/templates/root/sidebar.html
+++ b/calendario/root/templates/root/sidebar.html
@@ -8,19 +8,19 @@
     </h6>
     <ul class="nav flex-column">
       <li class="nav-item">
-        <a class="nav-link" href="../../sesiones/calendarioFundamentos/">
+        <a class="nav-link" href="../../../sesiones/calendarioFundamentos/">
           <span data-feather="file-text"></span>
           1. Fundamentos de programación
         </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="../../sesiones/calendarioLenguajes/">
+        <a class="nav-link" href="../../../sesiones/calendarioLenguajes/">
           <span data-feather="file-text"></span>
           2. Lenguajes de programación
         </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="../../sesiones/calendarioIA/">
+        <a class="nav-link" href="../../../sesiones/calendarioIA/">
           <span data-feather="file-text"></span>
           3. Inteligenica Artificial
         </a>
