Acabar funcionalidad para recorrer sesiones

--- a/calendario/sesiones/templates/sesiones/forms/reemplazar.html
+++ b/calendario/sesiones/templates/sesiones/forms/reemplazar.html
@@ -8,7 +8,7 @@
   <div class="text-center display-4">
     <strong>Agregar nueva sesión</strong>
   </div>
-    <form method="POST" action="addSessionGroup" class="mt-2">
+    <form method="POST" action="../../replacedSessionGroup" class="mt-2">
       {% csrf_token %}
       {{ form.media }}
       <div class="form-group row">
