--- a/calendario/sesiones/templates/sesiones/index.html
+++ b/calendario/sesiones/templates/sesiones/index.html
@@ -32,7 +32,7 @@
                     </div>
                     <div class="w-25">
                         <a class="btn btn-primary btn-sm"
-                        href="{% url 'replaceSessionGroup' s.session.idSession %}">
+                        href="{% url 'formReplacedSession' s.session.idSession %}">
                             <i class="fas fa-plus fa-xs"></i>
                         </a>
                         <button type="button" class="btn btn-danger btn-sm">
