--- a/calendario/sesiones/templates/sesiones/index.html
+++ b/calendario/sesiones/templates/sesiones/index.html
@@ -35,9 +35,10 @@
                         href="{% url 'formReplacedSession' s.session.idSession %}">
                             <i class="fas fa-plus fa-xs"></i>
                         </a>
-                        <button type="button" class="btn btn-danger btn-sm">
+                        <a class="btn btn-danger btn-sm"
+                        href="{% url 'formDeleteSession' s.session.idSession %}">
                             <i class="fas fa-trash fa-xs"></i>
-                        </button>
+                        </a>
                         <button type="button" class="btn btn-dark btn-sm">
                             <i class="fas fa-edit fa-xs"></i>
                         </button>
