--- a/calendario/sesiones/templates/sesiones/index.html
+++ b/calendario/sesiones/templates/sesiones/index.html
@@ -25,7 +25,7 @@
 <div class="row mx-0"> <!-- Empieza row div -->
     {% for s in sessions %}
         {% if s.isClass %}
-            <div class="card col-6 bg-info">
+            <div class="card col-6 bg-transparent">
         {% else %}
             <div class="card col-6 bg-warning">
         {% endif %}
@@ -46,6 +46,10 @@
                         <button type="button" class="btn btn-dark btn-sm">
                             <i class="fas fa-edit fa-xs"></i>
                         </button>
+                        <a class="btn btn-info btn-sm"
+                        href="{% url 'consultSession' s.idSession %}">
+                            <i class="fas fa-eye fa-xs"></i>
+                    </a>
                     </div>
                 </div>
             </div>
